# QuantLite

./: .env.example  .gitignore  README.md  TECHNICAL_REPORT.md  description.md  parser.py  pyproject.toml  test_dsl_parser.py  users.yaml.example
app/: config.py  db.py  main.py  scheduler.py
app/ai/: __init__.py  agent.py  config.py  tools.py
app/api/: auth.py  routes_ai.py  routes_backtest.py  routes_data.py  routes_settings.py
app/data/: __init__.py  loader.py
app/data/sources/: __init__.py  cn.py  us.py
app/dsl/: __init__.py  ast_nodes.py  executor.py  lexer.py  parser.py  whitelist.py
app/engine/: __init__.py  backtest.py  metrics.py
docs/: 01-architecture.md  02-dsl-and-engine.md  03-liteai-agent.md  04-frontend.md  05-changelog.md  06-miniprogram.md  README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts  style.css  theme-vars.ts
frontend/src/api/: client.ts
frontend/src/components/: AppLayout.vue  KLineChart.vue  LoginDialog.vue  Markdown.vue  MetricCard.vue  NavCurveChart.vue  Sparkline.vue  StatCard.vue
frontend/src/i18n/: en.ts  index.ts  zh.ts
frontend/src/stores/: auth.ts  data.ts
frontend/src/views/: BacktestDetail.vue  Backtests.vue  Dashboard.vue  DataOps.vue  Lab.vue  Settings.vue  Strategies.vue  SymbolDetail.vue  Symbols.vue
scripts/: start_server.sh  stop_server.sh
tests/: test_dsl_executor.py  test_dsl_executor_extended.py  test_engine.py  test_storage_smoke.py
