[project]
name = "quant-lite"
version = "0.1.0"
description = "Small-team quant research and backtesting tool (CN + US markets)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "polars>=1.13",
    "pyarrow>=18.0",
    "akshare>=1.15",
    "filelock>=3.16",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "bcrypt>=4.2",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "APScheduler>=3.10",
    "tzdata>=2024.2",
    "anthropic>=0.40",
    "openai>=1.55",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "frontend*"]

[tool.ruff]
line-length = 100
target-version = "py310"
